--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,8 @@
     <title>Einfach ML - Easy Machine Learning Library for Java</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="plot.js"></script>
+    <script src="global.js" type="module"></script>
+    <script src="test/TestData.js" type="module"></script>
 </head>
 <body>
 
@@ -24,201 +25,30 @@
     </ul>
 </div>
 
-<!-- Network Info Badges in One Line -->
-<div class="d-flex justify-content-center mb-4">
-    <div class="me-3"><strong>Network:</strong> <span id="network-id">uuid</span></div>
-    <div class="me-3"><strong>Status:</strong> <span class="badge text-bg-secondary" id="network-status">New</span></div>
-    <div class="me-3"><strong>Epoch Goal:</strong> <span class="badge text-bg-primary rounded-pill" id="epoch-goal">14</span></div>
-    <div><strong>Current Epoch:</strong> <span class="badge text-bg-primary rounded-pill" id="current-epoch">14</span></div>
-</div>
-
 <!-- Scrollable Container for Cards -->
-<div class="d-flex flex-wrap justify-content-center gap-4 overflow-auto scroll-container mt-4 mb-5">
-
-    <!-- Card 1 -->
-    <div class="card" style="width: 18rem;">
-        <div class="card-header">
-            Network Metrics
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Avg. Fitness Error</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="avg-fitness-error">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Last Fitness Error</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="last-fitness-error">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Last Training Time</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="last-training-time">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Epochs</div>
-                    <span>Total Training Time: 102h</span>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="total-epochs">14</span>
-            </li>
-        </ul>
-    </div>
-
-    <!-- Card 2 -->
-    <div class="card" style="width: 18rem;">
-        <div class="card-header">
-            Algorithm Board
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Input Size</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="input-size">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Output Size</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="output-size">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Learning Ratio</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="learning-ratio">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Complexity</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="complexity">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Tridimensional</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="tridimensional">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Algorithm Type</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="algorithm-type">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Shape Type</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="shape-type">14</span>
-            </li>
-        </ul>
-    </div>
-
-    <!-- Card 3: Input and Output Values -->
-    <div class="card" style="width: 18rem;">
-        <div class="card-header">
-            Input and Output Values
-        </div>
-        <ul class="list-group list-group-flush">
-            <!-- Horizontal layout for badges -->
-            <li class="list-group-item d-flex flex-wrap justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Last Input Values</div>
-                </div>
-                <div class="d-flex flex-wrap" id="last-input-values">
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 1</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 2</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 3</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 4</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 5</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 6</span>
-                </div>
-            </li>
-            <li class="list-group-item d-flex flex-wrap justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Last Expected</div>
-                </div>
-                <div class="d-flex flex-wrap" id="last-expected-values">
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 1</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 2</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 3</span>
-                </div>
-            </li>
-            <li class="list-group-item d-flex flex-wrap justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Last Predicted</div>
-                </div>
-                <div class="d-flex flex-wrap" id="last-predicted-values">
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 1</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 2</span>
-                    <span class="badge text-bg-primary rounded-pill text-wrap me-1">Value 3</span>
-                </div>
-            </li>
-        </ul>
-    </div>
-
-    <!-- Card 4 -->
-    <div class="card" style="width: 18rem;">
-        <div class="card-header">
-            DataSet and Predictions
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">DataSet Size</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="dataset-size">14</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Predictions Size</div>
-                </div>
-                <span class="badge text-bg-primary rounded-pill text-wrap" id="predictions-size">14</span>
-            </li>
-        </ul>
-    </div>
-
+<div class="d-flex flex-wrap justify-content-center gap-4 overflow-auto scroll-container mt-4 mb-5" id="card-container">
 </div>
 
-<!-- Plotly Charts Section -->
+<!-- Plotly MSE Section -->
+<div class="container mt-5">
+    <!-- Plotly + Average -->
+    <plotly-mse-errors></plotly-mse-errors>
+    <plotly-mse-error-last></plotly-mse-error-last>
+</div>
+
+<div class="container mt-5">
+    <plotly-scatter-expected-predicted></plotly-scatter-expected-predicted>
+</div>
+
 <div class="container mt-5">
     <div class="row text-center">
         <div class="col-md-6 mb-4">
-            <h5>MSE Errors</h5>
-            <div id="plotly-mse-errors"></div>
-        </div>
-        <div class="col-md-6 mb-4">
-            <h5>Neural Shape</h5>
-            <div id="plotly-neural-shape"></div>
-        </div>
-    </div> <!--
-    <div class="row text-center">
-        <div class="col-md-6 mb-4">
-            <h5>Training Epochs</h5>
-            <div id="plot3"></div>
-        </div>
-        <div class="col-md-6 mb-4">
-            <h5>Training Times</h5>
-            <div id="plot4"></div>
-        </div>
-    </div> -->
-    <div class="row text-center">
-        <div class="col-md-6 mb-4">
-            <h5>Scatter Predicted</h5>
-            <div id="plotly-scatter-predicted"></div>
-        </div>
-        <div class="col-md-6 mb-4">
-            <h5>Scatter Expected</h5>
-            <div id="plotly-scatter-expected"></div>
+            <plotly-neural-shape></plotly-neural-shape>
         </div>
     </div>
 </div>
+
+<!-- Manual Compute (Import CSV datapair or Manual 1 Element + two buttons Compute or Predict -->
 
 <!-- Model Upload and Download Section -->
 <div class="container mt-5">
@@ -235,6 +65,18 @@
     </form>
 </div>
 
+
+<!--
+    <div class="row text-center">
+        <div class="col-md-6 mb-4">
+            <h5>Training Epochs</h5>
+            <div id="plot3"></div>
+        </div>
+        <div class="col-md-6 mb-4">
+            <h5>Training Times</h5>
+            <div id="plot4"></div>
+        </div>
+    </div> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
