It works like magic. Todo-Fix Deserialization / Serialization

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,6 +30,9 @@
 <div class="d-flex flex-wrap justify-content-center gap-4 overflow-auto scroll-container mt-4 mb-5" id="card-container">
 </div>
 
+<div class="d-flex flex-wrap justify-content-center gap-4 overflow-auto scroll-container mt-4 mb-5" id="card-container-topics">
+</div>
+
 <!-- Plotly MSE Section -->
 <div class="container mt-5">
     <!-- Plotly + Average -->
